--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   <body>
     <h1>Selamat Datang di Coffee Shop</h1>
     <p>Nikmati berbagai macam kopi berkualitas tinggi.</p>
+    <img
+      src="assets/img/coffe.webp"
+      alt="gambar coffe"
+      width="500"
+      height="500"
+    />
+    <br /><br />
     <a href="menu.html">Lihat Menu</a>
   </body>
 </html>
